--- a/css/index.html
+++ b/css/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +8,21 @@
     <title>welcome</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <div class="main">
         <h1>main header</h1>
-        <ul>list1</ul>
-        <ul>list2</ul>
-        <ul>list3</ul>
-        <ul>list4</ul>
+        <ul>
+            <li>list</li>
+            <li>list</li>
+            <li>list</li>
+            <li>list</li>
+            <li>list</li>
+
+
+
+        </ul>
 
 
 
@@ -23,8 +31,30 @@
     <div>
         <h3>my first block
             <p class="first">
-                
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, blanditiis fugiat aspernatur itaque ipsum voluptates dicta obcaecati et quas dolores. Aspernatur id impedit architecto! Vel alias provident dolores ipsum totam minus amet odit obcaecati facere. Nemo assumenda eligendi fugiat accusamus doloribus optio impedit dolore ullam earum a. Quod consequatur mollitia atque itaque impedit, repellendus, eveniet labore beatae sit sunt distinctio obcaecati fugit enim minus, ex facilis quo natus expedita a deserunt? Perferendis aliquid rerum neque assumenda, enim iusto nostrum quam! Enim numquam quibusdam explicabo tempora sint vero illo architecto repudiandae atque repellendus consectetur amet modi iste corrupti soluta reiciendis, itaque sunt unde sed quod! Quos perferendis cumque praesentium nihil deleniti sit dolore earum! Alias iste temporibus eligendi repellendus explicabo, praesentium neque quod vero odio dicta, a rem veniam mollitia nulla facilis consequatur laboriosam porro minus eaque cum dignissimos. Unde quae aut quas quisquam hic nulla, iste voluptas vero accusamus deleniti in magnam tempore! Nisi asperiores vitae, dolore dolores, nulla repudiandae culpa sunt corporis explicabo quo non quas reiciendis sequi ad quos laboriosam ab mollitia illum placeat tempore quibusdam soluta officia aperiam debitis. Repellat, delectus exercitationem doloribus atque culpa magnam suscipit natus laborum accusamus molestiae aspernatur minus ad dignissimos dolores, eos, nulla tenetur doloremque labore dolorum soluta possimus veritatis. Aut vero veniam obcaecati quia qui labore velit possimus, quae, enim illum error repudiandae sunt distinctio. Placeat sequi soluta veniam aspernatur sint ut, facere dolores impedit non, delectus vel alias odit veritatis quia ipsam sunt, ab porro enim modi. Temporibus, maxime. Voluptatum laudantium delectus perferendis odio, magni distinctio ad accusamus vel consectetur ut dolore excepturi repudiandae amet est deserunt quibusdam nostrum officia officiis ratione minus ipsum harum quia. Asperiores ullam voluptate tempora, labore dolore, nulla sapiente dolorum aliquam dolor, dolorem harum nobis eligendi. Maxime esse totam iste quod, voluptatem delectus itaque magni.</p>
+
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, blanditiis fugiat aspernatur itaque
+                ipsum voluptates dicta obcaecati et quas dolores. Aspernatur id impedit architecto! Vel alias provident
+                dolores ipsum totam minus amet odit obcaecati facere. <samp>Nemo assumenda eligendi fugiat</samp>
+                accusamus doloribus optio impedit dolore ullam earum a. Quod consequatur mollitia atque itaque impedit,
+                repellendus, eveniet labore beatae sit sunt distinctio obcaecati fugit enim minus, ex facilis
+                class="green"quo natus expedita a deserunt?Perferendis aliquid rerum neque assumenda, enim iusto nostrum
+                quam! Enim numquam quibusdam explicabo tempora sint vero illo architecto repudiandae atque repellendus
+                consectetur amet modi iste corrupti soluta reiciendis, itaque sunt unde sed quod! Quos perferendis
+                cumque praesentium nihil deleniti sit dolore earum! Alias iste temporibus eligendi repellendus
+                explicabo, praesentium neque quod vero odio dicta, a rem veniam mollitia nulla facilis consequatur
+                laboriosam porro minus eaque cum dignissimos. Unde quae aut quas quisquam hic nulla, iste voluptas vero
+                accusamus deleniti in magnam tempore! Nisi asperiores vitae, dolore dolores, nulla repudiandae culpa
+                sunt corporis explicabo quo non quas reiciendis sequi ad quos laboriosam ab mollitia illum placeat
+                tempore quibusdam soluta officia aperiam debitis. Repellat, delectus exercitationem doloribus atque
+                culpa magnam suscipit natus laborum accusamus molestiae aspernatur minus ad dignissimos dolores, eos,
+                nulla tenetur doloremque labore dolorum soluta possimus veritatis. Aut vero veniam obcaecati quia qui
+                labore velit possimus, quae, enim illum error repudiandae sunt distinctio. Placeat sequi soluta veniam
+                aspernatur sint ut, facere dolores impedit non, delectus vel alias odit veritatis quia ipsam sunt, ab
+                porro enim modi. Temporibus, maxime. Voluptatum laudantium delectus perferendis odio, magni distinctio
+                ad accusamus vel consectetur ut dolore excepturi repudiandae amet est deserunt quibusdam nostrum officia
+                officiis ratione minus ipsum harum quia. Asperiores ullam voluptate tempora, labore dolore, nulla
+                sapiente dolorum aliquam dolor, dolorem harum nobis eligendi. Maxime esse totam iste quod, voluptatem
+                delectus itaque magni.</p>
 
 
 
@@ -37,7 +67,18 @@
     <div>
         <h3>this is my second block
             <p class="second">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quam incidunt tempore quisquam, sit quis facere veniam quae placeat inventore culpa, id nobis excepturi. Voluptatem odio soluta eum saepe sunt necessitatibus odit exercitationem numquam fugit maiores, nostrum ipsum, totam delectus, adipisci dolorum molestias reiciendis? Magnam voluptatibus animi repellat unde. Minima labore iusto molestiae quo ut voluptatem sunt soluta, dicta odio, quasi in, dignissimos reiciendis incidunt repellat. Odit ab adipisci dignissimos vel reprehenderit aperiam illo provident deserunt, ipsum dolorem consequatur explicabo nisi voluptatum veniam! Placeat incidunt nam perferendis ea animi iusto illo quidem natus repudiandae neque quasi accusantium adipisci iste nostrum enim expedita, ipsum qui possimus officiis numquam. Atque magnam laborum sit accusamus inventore aliquam fugiat mollitia odio cumque rerum. Doloremque unde aspernatur tempore enim illum ut ea harum odit! Officiis, odit quam aliquid quis rem ipsa iusto sed ad! Reprehenderit doloribus itaque nostrum vero sit vitae et tenetur praesentium in?</p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quam incidunt tempore quisquam, sit quis
+                facere veniam quae placeat inventore culpa, id nobis excepturi. Voluptatem odio soluta eum saepe sunt
+                necessitatibus odit exercitationem numquam fugit maiores, nostrum ipsum, totam delectus, adipisci
+                dolorum molestias reiciendis? Magnam voluptatibus animi repellat unde. Minima labore iusto
+                molestiae<span>hey dude aere you crazy</span> quo ut voluptatem sunt soluta, dicta odio, quasi in,
+                dignissimos reiciendis incidunt repellat. Odit ab adipisci dignissimos vel reprehenderit aperiam illo
+                provident deserunt, ipsum dolorem consequatur explicabo nisi voluptatum veniam! Placeat incidunt nam
+                perferendis ea animi iusto illo quidem natus repudiandae neque quasi accusantium adipisci iste nostrum
+                enim expedita, ipsum qui possimus officiis numquam. Atque magnam laborum sit accusamus inventore aliquam
+                fugiat mollitia odio cumque rerum. Doloremque unde aspernatur tempore enim illum ut ea harum odit!
+                Officiis, odit quam aliquid quis rem ipsa iusto sed ad! Reprehenderit doloribus itaque nostrum vero sit
+                vitae et tenetur praesentium in?</p>
 
 
 
@@ -51,6 +92,7 @@
 
 
     </div>
-    
+
 </body>
+
 </html>
