--- a/question_solve/index.html
+++ b/question_solve/index.html
@@ -18,23 +18,33 @@
             <td class="a"> c</td>
             <td class="d"> d</td>
         </tr>
-    </table>
 
 
-
-
-    <table class="tbl2">
         <tr>
-            <td class="e">e
-                <td class="f">f
-                    <table>
-                        <tr>
-                            <td class="g">g</td>
-                        </tr>
-                    </table>
-                </td>
-                
-            </td>
+            <th rowspan="2">e</th>
+            <td>f</td>
+        </tr>
+        <tr>
+            <td>g</td>
+        </tr>
+
+        <tr>
+            <td>h</td>
+            <td>i</td>
+
+
+        </tr>
+        <tr>
+   <th rowspan="2"> j</th>
+   <td rowspan="2">k </td>
+   <td>l</td>
+   <tr>
+    <td>m</td>
+   </tr>
+
+     </tr>
+        <tr>
+            <td class="n">n</td>
         </tr>
 
 
@@ -44,7 +54,11 @@
 
 
 
+
+
+
     </table>
+
 
 
 
